--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PhotoAlbum</string>
+    <string name="photo_album_pro">Photo Album Pro</string>
+    <string name="image">image</string>
 </resources>
