--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">PhotoAlbum</string>
     <string name="photo_album_pro">Photo Album Pro</string>
     <string name="image">image</string>
+    <string name="album_name">Album Name</string>
+    <string name="delete_album">Delete Album</string>
+    <string name="add_photo">Add Photo</string>
 </resources>
